--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -1,13 +1,13 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-c555555ontainer">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/admin/create">Crear producto</a>
+     <a mat-list-item routerLink="/admin/create">Crear producto</a>
       <a mat-list-item routerLink="/admin">Home</a>
-      <a mat-list-item routerLink="/admin/table">Inventario</a>
+      <!--     <a mat-list-item routerLink="/admin/table">Inventario</a>-->
       <a mat-list-item routerLink="/admin/products">Productos</a>
       <button mat-list-item (click)="logout()">Chao</button>
 
