--- a/src/app/admin/components/products-list/products-list.component.html
+++ b/src/app/admin/components/products-list/products-list.component.html
@@ -5,16 +5,16 @@
     <td mat-cell *matCellDef="let product"> {{product.id}} </td>
   </ng-container>
   <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <th mat-header-cell *matHeaderCellDef> Titulo </th>
     <td mat-cell *matCellDef="let product"> {{product.title}} </td>
   </ng-container>
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price </th>
+    <th mat-header-cell *matHeaderCellDef> Precio </th>
     <td mat-cell *matCellDef="let product"> {{product.price}} </td>
   </ng-container>
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Actions </th>
-    <td mat-cell *matCellDef="let product"> 
+    <th mat-header-cell *matHeaderCellDef> Acciones </th>
+    <td mat-cell *matCellDef="let product">
       <a mat-raised-button [routerLink]="['edit', product.id]">Editar</a>
       <button mat-raised-button color="warn" (click)="deleteProduct(product.id)">Eliminar</button>
     </td>
