--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -3,29 +3,85 @@
     <ng-template matStepLabel>Sus productos</ng-template>
     <div *ngIf="(products$ | async) as products">
         <p *ngIf="products.length === 0">no hay productos</p>
-        <div class="row" *ngFor="let product of products">
+        <div class="row cont" *ngFor="let product of products">
           <div class="col-xs-12 col-sm-2 col-md-2">
             <div class="box">
               <img class="image" [src]="product.image" alt="">
             </div>
           </div>
-          <div class="col-xs-12 col-sm-5 col-md-5">
+          <div class="col-xs-4 col-sm-5 col-md-3">
             <div class="box">
-              {{ product.title }}
+             <h3>{{ product.title }}</h3>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-5 col-md-5">
+          <div class="col-xs-4 col-sm-5 col-md-3">
             <div class="box">
-              {{ product.price }} €
+              <h3>{{ product.price }} €</h3>
             </div>
           </div>
+          <div class="col-xs-4 col-sm-5 col-md-3">
+            <div class="box">
+              <button mat-fab color="warn" aria-label="Example icon button with a delete icon">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </div>
+
         </div>
     </div>
 
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Datos personales</ng-template>
-    <h1>contenido</h1>
+
+    <form [formGroup]="form">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Tus datos</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="row">
+          <div class="col-xs">
+            <mat-form-field>
+              <input placeholder="email" formControlName="email" matInput type="email">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs">
+            <mat-form-field>
+              <input placeholder="Nombre" formControlName="name" matInput type="text">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs">
+            <mat-form-field>
+              <input placeholder="Apellido" formControlName="lastname" matInput type="text">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs">
+            <mat-form-field>
+              <input placeholder="Telefono" formControlName="phone" matInput type="tel">
+            </mat-form-field>
+          </div>
+        </div>
+
+      </mat-card-content>
+      <div class="row">
+        <div class="col">
+          <mat-radio-group formControlName="shipping">
+            <mat-radio-button value="free">Envio Gratis</mat-radio-button>
+            <mat-radio-button value="priority">Envio prioritario</mat-radio-button>
+            <mat-radio-button value="nextday">Envio al siguiente dia</mat-radio-button>
+          </mat-radio-group>
+        </div>
+      </div>
+    </mat-card>
+    </form>
+
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Pago</ng-template>
